public/resources/style.css
@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300|Jim+Nightshade);

body {
   text-align: center;
   
   font: 16px "Source Sans Pro", sans-serif;
   
   overflow: scroll;

   background: #499bea; /* Old browsers */
   background: -moz-linear-gradient(top,  #499bea 0%, #207ce5 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#499bea), color-stop(100%,#207ce5)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #499bea 0%,#207ce5 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top,  #499bea 0%,#207ce5 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  #499bea 0%,#207ce5 100%); /* IE10+ */
   background: linear-gradient(top,  #499bea 0%,#207ce5 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5',GradientType=0 ); /* IE6-9 */
}

#logo {
   font: 80px "Jim Nightshade", cursive;
   font-style: italic;
   color: white;
   text-shadow: 0 4px 8px black;
   letter-spacing: 4px;
}

#logo span {
   font: 20px "Source Sans Pro", sans-serif;
   font-weight: bold;
   text-shadow: 0 0 6px black;
}

#summary li {
   display: inline-block;
   vertical-align: middle;
   text-align: center;
   border-radius: 10px;

   -webkit-transition: background-color 0.5s ease-in-out;
   transition: background-color 0.5s ease-in-out;
}

#summary li a {
   display: block;
   width: 100px;
   padding: 10px 0;
}

#summary li:hover {
   background-color: white;
}

section, h1 {
   background-color: rgba(237, 239, 244, 0.9);
   border: 3px solid rgba(237, 239, 244, 1);
   border-radius: 20px;
   padding: 10px 30px;
   margin-bottom: 20px;
}

h1 {
   padding: 10px 30px;
   margin-top: 0;
}

h2 {
   margin: 5px 0px 10px 0px;
   border-bottom: 1px solid #666;
   color: orange;
   font-size: 1.7em;
   text-shadow: 0 1px 0px #666;
   letter-spacing: 0.05em;
}

h3 {
   margin: 20px 0px;
}

h4 {
   margin-bottom: 0;
   padding-bottom: 3px;
   border-bottom: 1px solid #666;
}

a, a:visited {
  color: blue;
}

.example, .example-without-label {
   border: 1px solid #BBB;
   border-radius: 10px;
   padding: 20px;
   clear: both;
   position: relative;
   margin: 20px 0px;
}

.example:before {
   content: "Example:";
   background-color: white;
   padding: 5px;
   border: 1px solid #BBB;
   border-radius: 10px;
   position: absolute;
   top: -13px;
   left: 20px;
}

.example .highlight {
   margin-bottom: 10px;
}

.example .highlight:last-child {
   margin-bottom: 0;
}

.example .highlight, .example-without-label .highlight {
   display: inline-block;
   vertical-align: top;
   width: 310px;
   max-width: 310px;
   overflow-x: auto;
}

.example .highlight:first-child, .example-without-label .highlight:first-child {
   margin-right: 20px;
}

.highlight {
   background-color: #272822;
   padding: 3px 10px;
   border-radius: 5px;
   color: white;
   overflow: hidden;
}

.ribbon-holder {
   position: fixed;
   right: 0px;
   top: 0px;
   height: 10em;
}

.ribbon-holder a {
   font: bold 1.25em 'Helvetiva Neue', Helvetica, Arial, sans-serif;

   text-decoration: none;
   
   letter-spacing: -.1px;
   
   opacity: 0.95;
   padding: 0.25em 0;
   
   position: relative;

   top: 3em;
   right: -3.5em;

   -moz-box-shadow: 0 0 6px #666;
   -webkit-box-shadow: 0 0 6px #666;
   -o-box-shadow: 0 0 6px #666;
   -ms-box-shadow: 0 0 6px #666;
   box-shadow: 0 0 6px #666;

   color: white;
   display: block;
   line-height: 1.35em;

   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);

   background: -webkit-linear-gradient(90deg, #DC7202, #EE7906);
   background: -moz-linear-gradient(90deg, #DC7202, #EE7906);
   background: -o-linear-gradient(90deg, #DC7202, #EE7906);
   background: -ms-linear-gradient(90deg, #DC7202, #EE7906);
   background: linear-gradient(90deg, #DC7202, #EE7906);
}

.ribbon-holder span {
   padding: 0.1em 3em;
   border: 1px solid #EBAA65;
   text-shadow: 0 1px 4px black;
}

#content {
   width: 800px;
   min-height: 600px;
   margin: 0 auto 30px auto;
   text-align: justify;
}

tt {
   display: inline-block;
   padding: 2px 10px;
   background-color: #DDD;
   border: 1px solid #AAA;
}

dt {
   display: inline-block;
   padding: 4px;
   background-color: #DDD;
   border: 1px solid #AAA;

   margin-top: 10px;
   margin-bottom: 3px;
}

dd {
   margin-left: 20px;
}

aside {
   float: right;
   background-color: #DDD;
   padding: 10px;
   margin: 1em 0 1em 1em;
   border: 1px solid #AAA;
   max-width: 300px;
}


.left {
   float: left;
}

.right {
   float: right;
}

.clear {
   clear: both;
}

nav {
   margin-bottom: 10px;
}

nav ul {
   list-style: none;
   margin: 0;
   height: 43px;
   padding: 0px 20px 2px 20px;

   /* Rounded Corners */
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   border-radius: 10px;

   /* Background color and gradients */
   background: #014464;
   background: -moz-linear-gradient(top, #0272a7, #013953);
   background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0272a7), to(#013953));

   /* Borders */
   border: 1px solid #002232;
   -moz-box-shadow: inset 0px 0px 1px #edf9ff;
   -webkit-box-shadow: inset 0px 0px 1px #edf9ff;
   box-shadow: inset 0px 0px 1px #edf9ff;
}

nav ul li {
   float: left;  
   display: block;  
   text-align: center;  
   position: relative;  
   padding: 4px 10px 4px 10px;  
   margin-right: 10px;  
   margin-top: 7px;  
   border: 1px solid #333;
   border-radius: 5px;
   background: #014464;
   -webkit-transition: background-color 0.25s ease-in-out;
   transition: background-color 0.25s ease-in-out;
}

nav ul li:hover, nav ul li.active {
   padding: 4px 9px 4px 9px;
   background: #02AAF2;
   box-shadow: inset 0px 0px 6px #333;
}

nav ul li a {
   font-size: 16px;
   display: block;
   outline: 0;
   text-decoration: none;
   text-shadow: 1px 1px 1px #000;
   color: white;
}

nav ul li a:visited {
   color: white;
}

nav ul li:hover a, nav ul li.active a {
   text-shadow: 1px 1px 1px #FFFFFF;
   color: white;
}

pre.source, pre.rendered, iframe.rendered {
   background-color: white;
   display: inline-block;
   vertical-align: top;
   max-width: 310px;
   overflow-x: auto;
}

pre.source, pre.rendered {
   background-color: #CCC;
   border: 1px solid #AAA;
   padding: 10px;
   margin: 0;
}

pre.source {
   margin-right: 20px;
}

/* parameter lists */

dl.parameters {
   margin: 0;
   position: relative;
   top: -15px;
}

/* tables */

table {
   border-collapse: collapse;
}

table thead tr:first-child {
   border-top: 2px solid black;
}

table thead tr:last-child, table tbody tr:last-child {
   border-bottom: 2px solid black;
}

table tr {
   border-left: 2px solid black;
   border-right: 2px solid black;
}

table tbody td, table thead th {
   text-align: center;
   border-left: 1px solid gray;
   padding: 3px 5px;
}

table tbody td:last-child, table thead th:last-child {
   border-right: 1px solid gray;
}

table tbody tr:nth-child(even), table thead tr {
   background-color: whitesmoke;
}


/** Scrollable tables for long lists of data */

table.scrollable {
   display: block;
}

table.scrollable tbody {
   max-height: 300px;
   display: block;
   overflow-y: auto;
}

table.scrollable td, table.scrollable th {
   max-width: 120px;
   min-width: 120px;
   text-overflow: ellipsis;
   overflow-x: hidden;
}

/** forms */
form label {
   display: block;
   font-weight: bold;
}

textarea {
   width: 100%;
   height: 200px;
   margin-bottom: 10px;
}

